# raspitemperaturemonitor

./: .bumpversion.cfg  .gitignore  CONTRIBUTING.rst  README.rst  app.py  pyproject.toml  run_monitor.sh  run_server.sh  tasks.py
.github/: ISSUE_TEMPLATE.md
.streamlit/: config.toml
docs/: conf.py  index.rst  installation.rst  usage.rst
raspitemperaturemonitor/: __init__.py  cli.py  db.py  raspitemperaturemonitor.py
tests/: __init__.py  test_raspitemperaturemonitor.py
