[tool]
[tool.poetry]
name = "raspitemperaturemonitor"
version = "0.1.0"
homepage = "https://github.com/seokwangwoo/raspitemperaturemonitor"
description = "Top-level package for RaspiTemperatureMonitor."
authors = ["Kwangwoo Seo <seokwangwoo@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "raspitemperaturemonitor" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = ">=7.2.0"
sphinx = ">=5.3.0"
black = "*"
sqlite3wrapper = {git = "https://github.com/seokwangwoo/sqlite3wrapper"}
adafruit-circuitpython-dht = "*"

[tool.poetry.scripts]
raspitemperaturemonitor = 'raspitemperaturemonitor.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
